2006-01-27  David Schleef  <ds@schleef.org>

	* gst/videoscale/vs_scanline.c: Oops, *that's* why I never
	  checked in this change -- it requires liboil features not
	  in 0.3.6.  Revert parts.

2006-01-27  David Schleef  <ds@schleef.org>

	* REQUIREMENTS:
	* configure.ac: update liboil requirement to 0.3.6
	* gst/videoscale/Makefile.am:
	* gst/videoscale/vs_scanline.c: liboilify

2006-01-27  Jan Schmidt  <thaytan@mad.scientist.com>

	* ext/libvisual/visual.c: (get_buffer):
	  When pad_alloc returns a GstFlowReturn other
	  than GST_FLOW_OK, make sure it is passed upstream.

2006-01-27  Jan Schmidt  <thaytan@mad.scientist.com>

	* ext/alsa/gstalsasink.c: (gst_alsasink_finalise),
	(gst_alsasink_class_init):
	  Free the device name string.

	* ext/ogg/gstoggmux.c: (gst_ogg_mux_class_init),
	(gst_ogg_mux_request_new_pad), (gst_ogg_mux_release_pad),
	(gst_ogg_mux_handle_src_event), (gst_ogg_mux_clear_collectpads):
	  Don't remove a pad from the collectpads structure until it
	  is released - it's a request pad, and may receive data again
	  if the element gets moved back to PLAYING state.

	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_get_xv_support):
	  Ensure we turn on double buffering on the Xv port, and
	  set the colour key to something dark and mysterious that
	  isn't black.

2006-01-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/alsa/gstalsaplugin.c: (plugin_init):
	* ext/cdparanoia/gstcdparanoiasrc.c:
	(gst_cd_paranoia_src_base_init), (plugin_init):
	* ext/gnomevfs/gstgnomevfs.c: (plugin_init):
	* ext/ogg/gstoggdemux.c: (gst_ogg_demux_plugin_init):
	  - a library should not call setlocale. see "Libraries" node in
	    gettext manual
	  - make sure all plugins that use translation do bindtextdomain
	    to point to the localedir
	* gst/playback/gstplaybin.c: (gen_vis_element), (add_sink),
	(setup_sinks), (plugin_init):
	  all this, and check for NULL when creating sinks

2006-01-27  Julien MOUTTE  <julien@moutte.net>
